--- a/index.html
+++ b/index.html
@@ -5,28 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <script src="https://use.fontawesome.com/aa00dd93b3.js"></script>
     <title>Document</title>
 </head>
 <body>
-   <header class="main-header">
-       <div class="wrapper">
-           <h1 class="logo">
-               <a href="#">myPortfolio</a>
-           </h1>
-           <nav class="main-nav">
-            <a href="#"><i class="fa fa-user"></i> About me</a>
-            <a href="#"> <i class="fa fa-home"></i> Home</a>
-            <a href="#"><i class="fa fa-gamepad"></i> Game</a>
-            <a href="#"><i class="fa fa-address-card"></i> Contacts</a>
-        </nav>
-       </div>
-   </header>
-   <main>
-       
-   </main>
-   <footer></footer>
-</body>
-</html>
+    <header class="main-header">
+<div class="wrapper">
+            <h1 class="logo">
+                <a href="#">mypPrtfolio</a>
+            </h1>
+            <nav class="main-nav">
+                <a href="#"><i class="fa fa-motorcycle" aria-hidden="true"></i> About</a>
+                <a href="#"><i class="fa fa-paw" aria-hidden="true"></i> Home</a> 
+                <a href="#"><i class="fa fa-road" aria-hidden="true"></i> Game</a>
+                <a href="#"><i class="fa fa-road" aria-hidden="true"></i> About1</a>
+            </nav>
+        </div>
+    </header>
 
+    <main>
+
+    </main>
+    </body>
+</html>
